--- a/app/src/at-nguyenha/res/layout/item_newfeed.xml
+++ b/app/src/at-nguyenha/res/layout/item_newfeed.xml
@@ -1,6 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgAvatar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_img_avatar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/imgAvatar"
+        app:layout_constraintTop_toTopOf="@id/imgAvatar"
+        app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
+        android:layout_marginLeft="10dp"
+        android:textSize="15dp"
+        android:text="@string/cena_ha"/>
+
+    <ImageView
+        android:id="@+id/imgOption"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imgAvatar"
+        app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
+        android:src="@drawable/ic_3dot"
+        android:layout_margin="20dp"/>
+    
+    <ImageView
+        android:id="@+id/imgMainphoto"
+        android:layout_width="match_parent"
+        android:layout_height="375dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintTop_toBottomOf="@id/imgAvatar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:src="@drawable/ic_hamburger"/>
+
+    <ImageView
+        android:id="@+id/imgHeart"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/imgMainphoto"
+        app:layout_constraintLeft_toLeftOf="@id/imgMainphoto"
+        android:src="@drawable/ic_heart"/>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imgComment"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toTopOf="@id/imgHeart"
+        app:layout_constraintLeft_toRightOf="@id/imgHeart"
+        android:src="@drawable/ic_comment"/>
+
+    <ImageView
+        android:id="@+id/imgShare"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toTopOf="@id/imgHeart"
+        app:layout_constraintLeft_toRightOf="@id/imgComment"
+        android:src="@drawable/ic_share"/>
+
+    <View
+        android:id="@+id/vLine"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintTop_toBottomOf="@id/imgHeart"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ImageView
+        android:id="@+id/imgHeartblack"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@id/vLine"
+        app:layout_constraintLeft_toLeftOf="@id/imgMainphoto"
+        android:src="@drawable/ic_heart_black"/>
+
+    <TextView
+        android:id="@+id/tvHeartnumber"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        app:layout_constraintLeft_toRightOf="@id/imgHeartblack"
+        app:layout_constraintTop_toTopOf="@id/imgHeartblack"
+        app:layout_constraintBottom_toBottomOf="@id/imgHeartblack"
+        android:text="@string/_12"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_marginLeft="2dp"
+        app:layout_constraintLeft_toRightOf="@id/tvHeartnumber"
+        app:layout_constraintTop_toTopOf="@id/imgHeartblack"
+        app:layout_constraintBottom_toBottomOf="@id/imgHeartblack"
+        android:text="@string/textview_text_likes"/>
+
+    <TextView
+        android:id="@+id/tvNamestatus"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/imgHeartblack"
+        app:layout_constraintLeft_toLeftOf="@id/imgHeartblack"
+        android:text="@string/cena_ha"/>
+
+
+    <TextView
+        android:id="@+id/tvStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        app:layout_constraintTop_toBottomOf="@id/tvNamestatus"
+        app:layout_constraintLeft_toLeftOf="@id/vLine"
+        android:text="@string/textview_text_status"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
