--- a/app/src/at-uyennguyen/res/layout/activity_drawerlayout.xml
+++ b/app/src/at-uyennguyen/res/layout/activity_drawerlayout.xml
@@ -11,15 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FF8952">
+
         <TextView
-            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello \n How are you?"
             android:layout_gravity="center"
-            android:textSize="30sp"
-            android:textColor="@android:color/black">
-        </TextView>
+            android:gravity="center"
+            android:text="@string/tvFrameLayout"
+            android:textColor="@android:color/black"
+            android:textSize="30sp" />
+
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
