--- a/app/src/at-daiho/res/values/dimens.xml
+++ b/app/src/at-daiho/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="feed_item_button_size">30dp</dimen>
     <dimen name="feed_item_favorite_icon_size">15dp</dimen>
     <dimen name="feed_item_image_height">300dp</dimen>
+    <dimen name="feed_item_progress_bar_size">40dp</dimen>
 </resources>
