--- a/app/src/at-daiho/res/values/dimens.xml
+++ b/app/src/at-daiho/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="feed_item_favorite_icon_size">15dp</dimen>
     <dimen name="feed_item_image_height">300dp</dimen>
     <dimen name="feed_item_progress_bar_size">40dp</dimen>
+    <dimen name="recycler_view_pull_to_refresh_height">0dp</dimen>
+    <dimen name="recycler_view_pull_to_refresh_weight">1</dimen>
 </resources>
