--- a/app/src/at-cuongle/res/layout/row_bottom.xml
+++ b/app/src/at-cuongle/res/layout/row_bottom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/llRoot"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="@dimen/height_70dp"
     android:background="@drawable/hint_item_color"
     android:orientation="vertical">
 
@@ -21,8 +20,8 @@
         android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/margin_80dp"
         android:gravity="center_vertical"
-        android:layout_marginLeft="80dp"
         android:textColor="@color/color_items"
         android:textSize="24dp"
         app:layout_constraintStart_toEndOf="@+id/imgItem"
