--- a/app/src/at-cuongle/res/values/dimens.xml
+++ b/app/src/at-cuongle/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="height_50dp">50dp</dimen>
     <dimen name="guide_begin_24dp">24dp</dimen>
     <dimen name="margin_20dp">40dp</dimen>
+    <dimen name="margin_80dp">80dp</dimen>
+    <dimen name="height_70dp">70dp</dimen>
+    <dimen name="margin_100dp">100dp</dimen>
+    <dimen name="height_250dp">250dp</dimen>
 </resources>
