--- a/app/src/at-daiho/res/layout/fragment_mini_player.xml
+++ b/app/src/at-daiho/res/layout/fragment_mini_player.xml
@@ -1,72 +1,71 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tool="http://schemas.android.com/tools"
+    android:layout_height="62dp"
     tools:context="asiantech.internship.summer.MiniPlayerFragment">
 
-   <ImageView
-       android:id="@+id/imgCover"
-       android:layout_width="50dp"
-       android:layout_height="50dp"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintTop_toTopOf="parent"/>
+    <ImageView
+        android:id="@+id/imgCover"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.core.widget.ContentLoadingProgressBar
+    <SeekBar
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        style="?android:attr/progressBarStyleLarge"
+        android:layout_height="12dp"
         android:layout_gravity="center_horizontal"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btnPlay"
-        app:layout_constraintTop_toBottomOf="@+id/imgCover"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:text="Song name"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/textSize16"
         app:layout_constraintEnd_toStartOf="@id/btnPlay"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@id/imgCover"
-        app:layout_constraintTop_toTopOf="@id/imgCover"
-        android:text="Song name" />
+        app:layout_constraintTop_toTopOf="@id/imgCover" />
 
     <TextView
         android:id="@+id/tvArtist"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginTop="3dp"
+        android:text="Artist"
         android:textColor="@color/colorDarkGray"
         android:textSize="@dimen/textSize15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@id/tvTitle"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
-        android:text="Artist" />
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
     <Button
         android:id="@+id/btnNext"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:paddingRight="10dp"
         android:background="@drawable/ic_next"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:paddingRight="10dp"
+        app:layout_constraintBottom_toBottomOf="@id/imgCover"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imgCover" />
 
     <Button
         android:id="@+id/btnPlay"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:paddingRight="10dp"
         android:background="@drawable/ic_play"
+        android:paddingRight="10dp"
+        app:layout_constraintBottom_toBottomOf="@id/imgCover"
         app:layout_constraintEnd_toStartOf="@id/btnNext"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="@id/imgCover" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
