--- a/app/src/at-nguyenha/res/layout/fragment_list_music.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_list_music.xml
@@ -23,6 +23,7 @@
         android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:layout_weight="0.7"
+        android:layout_marginTop="10dp"
         android:background="@android:color/white">
 
         <androidx.constraintlayout.widget.Guideline
@@ -47,7 +48,7 @@
             <ImageView
                 android:id="@+id/imgPlaying"
                 android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_height="24dp"
                 android:src="@drawable/ic_music" />
 
         </androidx.cardview.widget.CardView>
@@ -73,7 +74,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imgPlayButton"
+            android:id="@+id/imgPlayPause"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_pause"
