--- a/app/src/at-uyennguyen/res/values/colors.xml
+++ b/app/src/at-uyennguyen/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="grey">#606060</color>
     <color name="greyOfHint">#ACA8A8</color>
     <color name="green">#30BE76</color>
+    <color name="grey46555">#46555C</color>
+    <color name="orange">#ABFFAB40</color>
+    <color name="orangeB40">#F0FFAB40</color>
 </resources>
 
