--- a/app/src/at-uyennguyen/res/layout/fragment_list_music.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_list_music.xml
@@ -27,6 +27,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_header" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/contrainLayoutPlay"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/orangeB40"
