--- a/app/src/at-cuongle/res/layout/fragment_main_screen_music.xml
+++ b/app/src/at-cuongle/res/layout/fragment_main_screen_music.xml
@@ -26,10 +26,11 @@
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
     <Button
-        android:id="@+id/btnBackMain"
+        android:id="@+id/btnPreviousMain"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginTop="10dp"
+        android:onClick="onClickShowBroadcast"
         android:background="@drawable/ic_skip_previous_red_a400_24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
