--- a/app/src/at-hauha/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-hauha/res/layout/fragment_edit_profile.xml
@@ -11,9 +11,9 @@
         android:id="@+id/imgAvatar"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="152dp"
         android:elevation="5dp"
-        android:src="@drawable/ic_empty_avatar"
+        android:src="@drawable/ic_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
-        android:elevation="2dp"
         android:hint="@string/hint_email_gmail_com"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
@@ -63,7 +62,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
-        android:elevation="2dp"
         android:hint="@string/hint_password"
         android:importantForAutofill="no"
         android:inputType="textPassword"
