--- a/app/src/at-hauha/res/layout/fragment_signup.xml
+++ b/app/src/at-hauha/res/layout/fragment_signup.xml
@@ -13,7 +13,7 @@
         android:layout_height="96dp"
         android:layout_marginTop="48dp"
         android:elevation="10dp"
-        android:src="@drawable/ic_empty_avatar"
+        android:src="@drawable/ic_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
