--- a/app/src/at-hauha/res/layout/user_header.xml
+++ b/app/src/at-hauha/res/layout/user_header.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="48dp"
         android:elevation="10dp"
-        android:src="@drawable/ic_empty_avatar"
+        android:src="@drawable/ic_avatar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
